--- a/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.3 SOME CENTRAL TERMS—ACCEPTED AND DISPUTED.md
+++ b/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.3 SOME CENTRAL TERMS—ACCEPTED AND DISPUTED.md
@@ -73,3 +73,31 @@
 与许多其他术语相比，这个词的争议性相对较小。它倾向于强调审美方面，同时避免了“口头文学”所暗含的限制，因为它并不局限于较长的文本形式。由此，它使各种言语艺术能够被放在一起研究，同时避免了有时附着在“口头”一词上的情感色彩（参见1.3.1）。代价在于它失去了与文学形式及其分析的平行性，因此有些研究者仍倾向于在涉及“文学性”体裁（如英雄诗或长篇叙事）时使用“口头文学”。字面上看，它似乎局限于文字，从而排除了造型、音乐或动作等方面，但大多数使用这一术语的学者都敏感于非言语要素，并将其解释为指涉表演而非纯粹的文字文本。
 
 这一术语不可避免地引发一个问题：什么才是“艺术”或“游戏”，以及根据谁的标准来界定？这些答案不能被想当然地假定。因此，它不仅与关于“艺术”本质的更广泛理论辩论相关（见7.2.4），还需要通过经验研究来进一步考察其在具体文化或体裁中的适用性。
+
+### 1.3.5 民间传说、民间艺术等
+
+“民俗学（folklore）”一词常被用来涵盖本书所讨论的许多主题。有时它被==广义地理解为一切“口头传承的传统”（“orally transmitted traditions”）形式，包括物质文化（material culture）==，但最常见的指称是==诸如故事、歌曲或谚语等言语形式（verbal forms），尤其强调对文本（texts）的收集或分析==。（由于“folklore”既指一门学科，也指其研究对象，因此关于其范围、方法和历史已有大量学术文献，可参见 Bauman 1989c, Brunvand 1976, 1986, Dorson 1983, Dundes n.d., Paredes 1969, 1977, Toelken 1979，以及第2.4.1–2节。）
+
+这一标题及相关术语，如“folk stories”（民间故事）、“folktales”（民间故事类型）、或“folk narratives”（民间叙事），长期以来激发了对那些原本可能被学界忽视的形式的研究，从而促成了对叙事、诗歌、歌曲、谜语（riddles）和谚语的大规模收集与分析。早期许多以“民俗学”名义进行的研究属于古物学传统（antiquarian tradition），侧重于积累庞大的档案资料而缺乏深入分析。但也有一些研究具有最高水平的学术价值，与人类学方法极为接近。尤其是在当代美国或斯堪的纳维亚民俗学者的最新研究中更是如此（英国人类学家往往对此缺乏认识）。因此，使用——或者至少承认——这一术语，也意味着与国际上高度复杂的学术研究相接轨。
+
+然而它也存在众所周知的问题。该词首次出现于1846年，用以取代“popular antiquities”（民间古物）和“popular literature”（民间文学），被描述为“一个良好的撒克逊复合词——Folklore，即人民的知识（the Lore of the People）”，当时它指的是被认为源自久远过去的残存之物（文化遗留物）：“仅存的几穗麦穗，零星散落在祖先曾经收获丰盈庄稼的田地上”（Thoms 1846: 862）。更近期的一个定义是：
+
+> 民俗（或传统与大众文化）是某一文化群体基于传统的全部创造，由群体或个人表达，并被认可为反映该群体的文化与社会身份的期待；其规范和价值通过口头、模仿或其他方式传承。其形式包括语言、文学、音乐、舞蹈、游戏、神话、仪式、习俗、手工艺、建筑以及其他艺术。（UNESCO，转引自 Honko 1989a: 8）
+
+在日常用语中，该词有时仍保留其最初的进化论色彩，即作为古老与集体传统的遗存，具有匿名性（anonymity），并归属于乡村与文盲“民众”（unlettered folk）。因此，许多英国人类学家避免使用“folklore”一词及其所指对象。但这些早期的联想如今已受到主要民俗学家的挑战，他们强调个人创造的重要性、现代形式的价值，以及城市和乡村语境的并重。有些学者将其外延扩大，例如在当代俄罗斯民俗学中，folklore被界定为“与人民当代诗性生活有关的一切事物”（Oinas 1984: 170）。因此，“民俗学”这一现代学科如今已在许多国家被确立为一个极具声望且常常具有创新性的学术领域。然而，早期的联想依旧强大，因此如果你使用“folklore”一词，就必须明确讨论这些问题，至少要让自己、读者和研究合作对象（他们可能反对这个词）清楚你在这些问题上的立场。
+
+需要考虑的一些关键问题包括：
+
+- 谁来界定“folk（民众）”，目的是什么？
+- 所谓的“民众”是否真的如常常暗示的那样，是农村的（rural）、“传统的”（traditional）、不识字的（non-literate），或者某种意义上“贴近自然”（close-to-nature）的人？抑或，他们只是任何因某种纽带而联系在一起或共享共同特征的群体（如 Dundes 1977: 22；另见 A.L. Lloyd 1952）？如果是这样，他们的产物或活动在何种意义上（如果有的话）与其他社会群体的有所不同？
+- 如何看待“民俗是由民众而非个人创造”（folklore is created by the folk）的旧观点，或者“现代城市人没有值得研究的言语艺术”（modern urban peoples have no verbal arts worth studying）的看法？（尽管有新的进展，但城市和工业形式可以说在民俗学研究中仍然被低估。）
+- 如果“民俗”通过口头传统传播，那么识字的群体或口头与书写之间的互动是否应当被排除在外？
+- 这个术语是否意味着研究对象仅限于古老或“传统”的形式，而排除了新创作的、尚未“沉淀为传统”（sunk into tradition）的作品（Dorson 1972b: 17，参见第9页及以下）？
+
+### 1.3.6 表演与表演事件（Performance and performance events）
+
+这些术语正逐渐成为记录和分析口头形式的重要组织性概念。尤其是在美国的“表演取向”（performance-oriented）的人类学家/民俗学家那里得到了充分发展。他们强调，口头表达和言语艺术是通过表演来实现的，而非仅仅作为可书写的文本。
+
+从某种意义上说，这类术语并不新鲜。大多数人类学家大概都理所当然地认为，在处理口头形式时，表演是语境的一部分，值得关注。但近年来的“表演”术语开辟了独特的研究兴趣，既包括演绎中的修辞与审美技巧，也包括表演及观众的具体情境，并且提出表演不是单纯的“语境”，而是核心本质所在。
+
+这种术语有时被理解为对立概念“文本”的拒斥。然而近来也有人将基于表演的术语视为互补而非对立的分析途径（Blackburn 1988；Sherzer 与 Woodbury 1987；Okpewho 1990），并将其作为探讨文本特征的新切入点（参见 Bauman 与 Briggs 1990；Hanks 1989；更多讨论见1.4（关于文本）、2.4.10 和 5.1）。
