取消行标记

--- a/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.3 SOME CENTRAL TERMS—ACCEPTED AND DISPUTED.md
+++ b/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.3 SOME CENTRAL TERMS—ACCEPTED AND DISPUTED.md
@@ -96,8 +96,61 @@
 
 ### 1.3.6 表演与表演事件（Performance and performance events）
 
-这些术语正逐渐成为记录和分析口头形式的重要组织性概念。尤其是在美国的“表演取向”（performance-oriented）的人类学家/民俗学家那里得到了充分发展。他们强调，口头表达和言语艺术是通过表演来实现的，而非仅仅作为可书写的文本。
+这些术语正逐渐成为记录和分析口头形式的重要组织性概念。尤其是在美国的“表演转向”（performance-oriented）的人类学家/民俗学家那里得到了充分发展。他们强调，口头表达和言语艺术是通过表演来实现的，而非仅仅作为可书写的文本。
 
 从某种意义上说，这类术语并不新鲜。大多数人类学家大概都理所当然地认为，在处理口头形式时，表演是语境的一部分，值得关注。但近年来的“表演”术语开辟了独特的研究兴趣，既包括演绎中的修辞与审美技巧，也包括表演及观众的具体情境，并且提出表演不是单纯的“语境”，而是核心本质所在。
 
-这种术语有时被理解为对立概念“文本”的拒斥。然而近来也有人将基于表演的术语视为互补而非对立的分析途径（Blackburn 1988；Sherzer 与 Woodbury 1987；Okpewho 1990），并将其作为探讨文本特征的新切入点（参见 Bauman 与 Briggs 1990；Hanks 1989；更多讨论见1.4（关于文本）、2.4.10 和 5.1）。
+这种术语有时被理解为对立概念“文本”（text）的拒斥。然而近来也有人将基于表演的术语视为互补而非对立的分析途径（Blackburn 1988；Sherzer 与 Woodbury 1987；Okpewho 1990），并将其作为探讨文本特征的新切入点（参见 Bauman 与 Briggs 1990；Hanks 1989；更多讨论见1.4（关于文本）、2.4.10 和 5.1）。
+
+### 1.3.7 叙事与叙述（Narrative and narration）
+
+这些术语有时被广义地使用，指代所有在其中蕴含时间顺序的言语形式，甚至扩展到其他媒介，包括视觉艺术和造型艺术，乃至生命本身。更常见的用法则是指虚构类作品，如小说、神话、故事与传说，大体上与非叙事形式（如对话、谚语或谜语）相对，且在实践中往往排除了诗歌。作为研究对象，它们已经在叙事学者以及一些基于田野或历史的口头形式研究中引发了大量兴趣（参见2.4.8，8.3.4）。
+
+这些术语并不完全对应本书讨论的兴趣范围：要么过于宽泛（涵盖了除言语媒介之外的许多事物），要么在较窄的意义上又排除了非叙事形式。然而，在某些研究目的下，它们依然值得考虑：
+
+1. 它们能够跨越传统/现代、口头/书写、言语/非言语的旧式划分，有时比那些建立在这种划分上的术语更具启发性。
+    
+2. 由于比特定体裁术语更宽泛，它们在比较研究和跨文化分析中特别有帮助。
+    
+3. 叙事学者在不同“声音”、元叙事或叙事结构方面的工作，为早期的分析增添了新的维度。
+    
+4. “叙述”（the act of telling）的概念突出了过程而不仅仅是产物。
+
+### 1.3.8 话语（Discourse）
+
+“话语”常被作为一个总括性术语，用来涵盖社会中所有形式的言语交际。在这一标题下，现今已经有大量详细的田野研究与理论分析，尤其是在社会语言学家和美国语言人类学家的工作中。
+
+有些人对该术语持抵触态度，认为它过于依赖特定的语言学与文学理论，或者被用作社会中霸权性、争议性和意识形态性的隐喻。它有时也显得过于模糊，例如某些语言学家把它消极地定义为“任何超出句子的东西”。然而，在言语艺术与表达研究中，该词通常被更为积极和直接地应用，指向各种主动的言语交际形式：“语言形式、内容和使用的最广泛和最全面层次……无论大或小，书面或口头，持久或短暂”（Sherzer 1987a: 305, 297）；或更简洁地说，就是“跨越所有形式与模式的语境中的语言”（Tannen 1982b: x）。这类研究的核心是考察语言在实际使用中的形式——正如 Ricoeur 所言，是“语言事件或语言使用”（1971: 530）。它们常常质疑盎格鲁-撒克逊社会科学中关于“意义”与“行动”的传统区分。现代“话语”研究者通常也敏锐地关注副语言、音乐或肢体动作等方面（尤其当他们的研究对象是语言的游戏性与艺术性使用时），并关心意义以及在某些情况下相关的政治与意识形态问题。
+
+因此，这一术语为基于田野的研究提供了契机，使研究者得以考察某一文化中的所有语言使用，而不仅限于“文学”形式。它避免了因“口头/书写”或“传统/现代”的旧式划分，以及因诸如“民俗”或“口头文学”这类带有民族中心预设的术语所导致的局限（Sweeney 1987: 12 中对此有有力论证）。它把注意力从产物本身转移到语言互动过程之上（更多讨论与参考文献见 Sherzer 1987a；另见 Tannen 1982b，Parkin 1984，Hanks 1989，以及2.4.10）。
+
+### 1.3.9 大众艺术 / 大众文化（Popular arts / popular culture）
+
+一些拒绝将研究领域局限在“传统”或“民间”表达的学者，现在开始探索以“popular（大众的）”为核心的组合用法。这将注意力转向当代世界：如今“文化的相互联系日益跨越全球”（Hannerz 1989: 66），许多当代的、大众化的、本土的或业余的言语表达形式都可以纳入研究之中。历史学家们也揭示了许多非精英的“大众文化”形式，它们并不容易被归入“民间”或“传统”的范畴（Burke 1978；Gurevitch 1988；Vincent 1989）。因此，“大众文化”及其相关术语正越来越多地进入学术分析和讨论之中。它经常被用来强调“普通人”而非职业实践者或活动，并纳入“混合”或“克里奥尔化”的形式，同时也为探索这些实践中的分层性、变动性或政治性因素提供了一种途径。
+
+这一术语本身也有问题。一段时间里，它被局限于指称某些特定形式，如电视、足球或大众媒体，或者与一个可争议的、基于阶级的定义联系在一起。它所暗示的某种“同质性”也可能具有误导性；而且“口头的”与“大众的”并不必然重合。再者，传统的三分法——1）传统或民间；2）精英或高雅文化；3）大众、商业或大众传媒——依然很有影响，容易导致混淆。不过，这种区分并非普遍适用。在某些语言中，“folk（民间）”与“popular（大众）”之间并没有清晰区分（据 Oinas 1984: 165，俄罗斯研究就是如此）；而在另一些地区——尤其是拉丁美洲——“大众文化”往往意味着下层阶级对被强加的主流文化的抵抗性实践。
+
+正如往常一样，精确定义存在困难：“popular”是指由“人民”创作和/或消费的吗？如果是，那具体是哪些“人民”？是指受到大多数人喜爱的形式？还是“工人阶级”的生产或消费？是“业余的”而非“专业的”？是“非官方的”而非“官方的”？是任何与“高雅”或“精英”文化对立的形式？还是在“商业”领域之外的表达？答案并不简单——但对某些学者来说，这个术语的价值就在于它明确提出了这些问题（关于这一主题的最新讨论，参见 Barber, Cosentino 等 1987（重要讨论）；Hannerz 1987, 1989；Coplan 1986；Waterman 1988；更一般的“popular culture”研究参见 Bigsby 1976；Fabian 1978；Kaplan 1984；Burke 1978；S. Hall 1964, 1981；Hall 和 Whannel 1964；Middleton 和 Horn 1981；Pickering 和 Green 1987；Waites 等 1982；而“vernacular（本土的）”一词也偶尔被用于类似含义）。
+
+### 1.3.10 其他术语（Other terms）
+
+以下这些术语虽然没有前面那些常见，但也有一定使用频率，值得简要说明：
+
+- **Aural（听觉的）**：作为“oral（口头的）”的替代词，特别强调“由耳塑造并意在通过耳来理解”的特性（Russo 1976: 49）。
+    
+- **Ethnopoetics（民族诗学）**：一个术语，意味着特别关注非西方民族的声音——“从文化特定性的角度重新定义诗歌，强调那些曾被西方称为‘异教’、‘外邦’、‘部落’、‘口头的’和‘民族的’传统”（Rothenberg 1983: xi；另见 Hymes 1981，Tedlock 1977, 1983, 1989，以及期刊 _Alcheringa-Ethnopoetics_；也参见 2.4.10）。
+    
+- **Expressive arts（表达性艺术）**：比“口头”或“言语”更广泛的概念，有时有助于避免将言语与非言语形式割裂。
+    
+- **Oracy（口语能力）**：作为“orality（口头性）”的替代，但通常缺少后者的普遍化含义（见 Tonkin 1974）；常用于教育语境中，指一系列复杂的口语技能。
+    
+- **Oral testimony（口头证词）**：尤其被口述历史学者使用（见 2.4.12），用以强调口头资料的证据性作用。但对于关注审美和语境因素的研究者来说，这个术语并不合适，因为单纯聚焦“证词”可能会误解说话者的意图，或忽略话语的其他功能。
+    
+- **Orature（口传文学 / 口述创作）**：作为“oral literature（口头文学）”的替代，避免了“literature”一词的词源问题，同时也是一个独立的积极用语（与 _écriture_ 相对），常用于“去殖民化心灵”的语境中（参见 Ngugi 1986: 94；Chinweizu 和 Madubuiko 1983: 32ff；Cancel 1989: 17）。
+    
+- **Poetics, rhetoric（诗学、修辞）**：有时用于指所有秩序化的语言，有时则仅指语言的某一特定方面（见 Jakobson 1960）。
+    
+- **Spoken art（口语艺术, Berry 1961）或 oral art（口头艺术, Herskovits 1961）**：作为“verbal art（言语艺术）”的替代。
+    
+
+此外，还有一些更为具体的体裁术语（参见第7章）。数量太多，不一一列举。但值得注意的是，“epos（史诗）”、“epic（史诗）”、“myth（神话）”、“saga（传说）”等词，虽然多用于有限的体裁分类，有时也被（令人困惑地）用来概括整个口头传统和言语艺术领域（见7.4）。
