--- a/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.3 SOME CENTRAL TERMS—ACCEPTED AND DISPUTED.md
+++ b/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.3 SOME CENTRAL TERMS—ACCEPTED AND DISPUTED.md
@@ -44,31 +44,77 @@
 
 ### 1.3.3 口头文学（Oral literature）
 
-这是另一个被广泛使用的术语，有时与“口头传统”重叠，但通常其涵盖范围和内涵略有不同。虽然常被认为是近代学术才提出的概念，但实际上“未书写的文学”这一想法在十九世纪的著作中就已经出现（Koelle 1854，Macdonald 1882，Burton 1865，Chatelain 1894）。这一概念在 H.M. 与 N.K. Chadwick 的鸿篇巨制《文学的成长》（The Growth of Literature）中得到了进一步传播。他们解释说：“文学与书写之间的联系是偶然的，属于文学历史上的一个次要阶段”（第3卷，1940：xi）。因此，他们不仅收录了欧洲和东方古典文明的例子，还包括非文字或半文字文化，并对鞑靼、波利尼西亚和非洲的“口头文学”作了长篇描述。许多当代研究也采用这一术语（Jacobs 1959, 1966；Finnegan 1970；Görög-Karady 1982；Burns 1983；期刊 _Cahiers de Littérature Orale_；关于口头程式化写作，见2.4.9），在人类学及其他学科中，它被广泛用于指称那些未书写却在某种意义上“文学化”的形式。
+有时与“口头传统”（oral tradition）重叠，但通常其涵盖范围和内涵略有不同。
+*Koelle, S.W. (1854) African Native Literature: or, Proverbs, Tales, Fables, and Historical Fragments in the Kanuri or Bornu Language, London.*
+ Koelle, S.W. (1854) 《非洲本土文学：或在Kanuri（卡努里）或Bornu（博尔努）语言中的格言、故事、寓言和历史片段》，伦敦。
+提出“未书写的文学”（unwritten literature），将其定义为一种没有文字记录的文化表达形式。
+>非洲的许多文化，特别是在 Kanuri 文化中，文学并非通过书写的形式传承，而是通过口头传递的。故事、寓言、历史传说、谚语等，==通过讲述和表演的方式代代相传==。这些口头表达形式是 Kanuri 社会文化中的的核心组成部分，承载着历史、智慧和道德观念。
+>虽然没有书面文学传统，但他们的文学形式在文化传承、知识积累和社会教化方面，起到了与书面文学同等甚至更为重要的作用，充满创意和艺术性。
+>非书面文学是 Kanuri 语言的一部分，是该语言文化不可分割的表现形式。通过对口头文学的记录和保存，不仅仅是在保存文字，也是在保存语言本身的一部分文化——即语言的音调、韵律、表达方式和情感。
 
-然而，这个术语并未得到普遍认可。有学者认为它自相矛盾（“literature”一词在词源学上意味着书写，怎么能是“未书写”的呢？），或者批评它将书写与民族中心主义的模式强加到那些可能包含超越纯粹言语和/或审美因素的活动之上，从而突出文本而不是表演的方面。相反的观点则认为，受制于词源尤其是以英语为中心的文化限定是不明智的；而避免使用“literature/ literary”来描述非书写形式，反而会唤起西方中心或精英主义的成见，把“他们”和“我们”割裂开来——这种观点则进一步被反驳，认为术语的使用应该强调文化差异，而不是将其模糊化。（更多讨论参见：支持使用者如 Finnegan 1970:15ff, 1988:61ff，Andrzejewski 1985，Bauman 1986: If；反对者如 Ong 1982:10–15，Huntsman 1981:214，Finnegan 1982:2ff，Sweeney 1987:9ff，Herzfeld 1985:202ff。）
+进一步传播： 
+*Chadwick, H.M. and N.K. (1932–40) The Growth of Literature, 3 vols, Cambridge:Cambridge University Press.*
+Chadwick, H.M. 和 N.K. (1932–40) 《文学的发展》，三卷本，剑桥：剑桥大学出版社。
+
+>该书探讨了口头传统在早期文学中的作用，分析了从口述历史到书面文学的转变。通过研究不同文化中的口头叙事形式，书中揭示了早期人类如何通过诗歌、史诗和传说记录他们的历史和社会经验。
+==“文学与书写之间的联系是偶然的，属于文学历史上的一个次要阶段”==
+> 他们不仅收录了欧洲和东方古典文明的例子，还包括非文字或半文字文化，并对鞑靼、波利尼西亚和非洲的“口头文学”作了长篇描述。
+
+许多当代研究也采用这一术语
+1. *Jacobs, M. (1959) The Content and Style of an Oral Literature, Chicago: University ofChicago Press.*
+2. *Jacobs, M. (1966) ‘A look ahead in oral literature research’, Journal of AmericanFolklore 79:413–27.*
+3. *Finnegan, R. (1970) Oral Literature in Africa, Oxford: Clarendon Press.*
+4. *Görög-Karady, V. (ed.) (1982) Genres, Forms, Meanings: Essays in African OralLiterature, Oxford: Journal of the Anthropological Society in Oxford (JASO).*
+5. *Burns, A.F. (1983) An Epoch of Miracles, Oral Literature of the Yucatec Maya, Austin:University of Texas Press*
+6. 期刊 _Cahiers de Littérature Orale
+7. 关于口头程式化写作，见2.4.9
+在人类学及其他学科中，它被广泛用于指称那些未书写却在某种意义上“文学化”（literary）的形式。
+
+不认可oral literature的观点：
+-  自相矛盾：“literature”一词在词源学上意味着书写，怎么能是“未书写”的呢？
+- 它将书写与民族中心主义的模式强加到那些可能包含超越纯粹言语和/或审美因素的活动之上，从而突出文本而不是表演的方面。
+反驳的观点有：
+- 受制于词源尤其是以英语为中心的文化限定是不明智的；
+- 避免使用“literature/ literary”来描述非书写形式，反而会唤起西方中心或精英主义的成见，把“他们”和“我们”割裂开来
+这种观点则进一步被反驳：
+- 认为术语的使用应该强调文化差异，而不是将其模糊化。
+
+
+参看：支持者如
+1. *Finnegan, R. (1970) Oral Literature in Africa, Oxford: Clarendon Press.15ff,* 
+2. *Finnegan, R. (1988) Literacy and Orality: Studies in the Technology of Communication,Oxford: Blackwell.61ff，*
+3. *Andrzejewski, B.W. (1985) ‘Oral literature’, in Andrzejewski et al.*
+4. *Bauman, R. (1986) Story, Performance, and Event: Contextual Studies of OralNarrative, Cambridge: Cambridge University Press.*
+
+反对者如 
+1. *Ong, W. (1982) Orality and Literacy. The Technologizing of the Word, London andNew York: Methuen.Oosten, J.G. (1985) The War：10–15*
+2. *Huntsman, J. (1981) ‘Butterfly collecting in a swamp: suggestions for studyingoral narratives as creative art’, Journal of the Polynesian Society 90:214.*
+3. *Finnegan 1982:2ff，*
+4. *Sweeney, A. (1987) A Full Hearing: Orality and Literacy in the Malay World,Berkeley: University of California Press:9ff*
+5. *Herzfeld, M. (1985) ‘Interpretations from within: metatext for a Cretan quarrel’, in Alexiou and Lambropoulos:202ff。*
 
 “口头文学”是否以及在多大程度上有用，取决于所研究的材料和研究问题。以下几点可帮助评估其适用性：
 
 1. 它强调“文学性”或“艺术性”方面。
-    
 2. 它允许关注个体的创造性行为，既包括新的形式，也包括旧的形式。
-    
 3. 它指向文化内部和文化之间的多样形式和体裁，而不是“口头传统”一词有时所暗示的未分化整体。
-    
 4. 它可以借鉴与书写文学相关的理论和比较研究，从而获得启发（但同时存在过度依赖西方文学典范的危险）。
-    
 5. 它提供了一个跨文化学者普遍认可的比较性术语（但风险在于可能忽视本土意义或互动）。
-    
-6. 它与“文学”这一概念在任何地方都存在的定义性问题相同，即“文学”本质上是什么、它如何与其他言语表达区分开来。对口头形式而言，这尤其棘手。此外，还有一种观点认为，与其试图划定“文学”的边界，不如把所有“强化的言语表达形式”放在一起研究（见 Howell 1986，Sherzer 1974, 1990，Sweeney 1987:12）。
-    
-7. “口头”一词本身带来一些洞见和问题（见1.3.1）。
+6. 它与“文学”这一概念在任何地方都存在的定义性问题相同，即“文学”本质上是什么、它如何与其他言语表达区分开来。对口头形式而言，这尤其棘手。此外，还有一种观点认为，与其试图划定“文学”的边界，不如把所有“强化的言语表达形式”放在一起研究。
+- *Howell 1986，*
+- *Sherzer 1974, 1990，*
+- *Sherzer, J. (1974) ‘Namakke, sunmakke, kormakke: three types of Cuna speech event’,in Bauman and Sherzer.*
+- *Sherzer, J. (1990) Verbal Art in San Bias, Cambridge: Cambridge University Press.*
+- *Sweeney 1987:12*
+1. “口头”一词本身带来一些洞见和问题（见1.3.1）。
 
 不必采取“全有或全无”的态度。一些学者避免将“口头文学”作为总括性术语（从而绕开相关争议），但会利用其优势使用“literary”这一形容词，或选择争议较少的词汇，如“口头叙事”（oral narrative）、“口头诗歌”（oral poetry）等。
 
 ### 1.3.4 言语艺术（Verbal art）
 
-“言语艺术”这一术语最早由 Bascom 在其经典文章中提出，用作“一个方便且恰当的术语，来指称民间故事、神话、传说、谚语、谜语及其他‘文学形式’”（1955:245）。在这一标签下，尤其是在美国民俗学家与人类学家的研究中，已经完成了大量工作。如今它通常也涵盖歌曲和诗歌，以及诸如命名、修辞、绕口令等言语过程。
+“言语艺术”这一术语最早由 Bascom 在其经典文章中提出，用作“一个方便且恰当的术语，来指称民间故事、神话、传说、谚语、谜语及其他‘文学形式’”。
+*Bascom, W.R. (1955) ‘Verbal art’, Journal of American Folklore 68: 245*
+在这一标签下，尤其是在美国民俗学家与人类学家的研究中，已经完成了大量工作。如今它通常也涵盖歌曲和诗歌，以及诸如命名、修辞、绕口令等言语过程。
 
 与许多其他术语相比，这个词的争议性相对较小。它倾向于强调审美方面，同时避免了“口头文学”所暗含的限制，因为它并不局限于较长的文本形式。由此，它使各种言语艺术能够被放在一起研究，同时避免了有时附着在“口头”一词上的情感色彩（参见1.3.1）。代价在于它失去了与文学形式及其分析的平行性，因此有些研究者仍倾向于在涉及“文学性”体裁（如英雄诗或长篇叙事）时使用“口头文学”。字面上看，它似乎局限于文字，从而排除了造型、音乐或动作等方面，但大多数使用这一术语的学者都敏感于非言语要素，并将其解释为指涉表演而非纯粹的文字文本。
 
@@ -144,9 +190,9 @@
     
 - **Oracy（口语能力）**：作为“orality（口头性）”的替代，但通常缺少后者的普遍化含义（见 Tonkin 1974）；常用于教育语境中，指一系列复杂的口语技能。
     
-- **Oral testimony（口头证词）**：尤其被口述历史学者使用（见 2.4.12），用以强调口头资料的证据性作用。但对于关注审美和语境因素的研究者来说，这个术语并不合适，因为单纯聚焦“证词”可能会误解说话者的意图，或忽略话语的其他功能。
+- **Oral testimony（口头证词）**：尤其被口述历史学者使用（见 2.4.12），用以强调口头资料的==证据性作用==。但对于关注审美和语境因素的研究者来说，这个术语并不合适，因为单纯聚焦“证词”可能会误解说话者的意图，或忽略话语的其他功能。
     
-- **Orature（口传文学 / 口述创作）**：作为“oral literature（口头文学）”的替代，避免了“literature”一词的词源问题，同时也是一个独立的积极用语（与 _écriture_ 相对），常用于“去殖民化心灵”的语境中（参见 Ngugi 1986: 94；Chinweizu 和 Madubuiko 1983: 32ff；Cancel 1989: 17）。
+- **Orature（口传文学 / 口述创作）**：作为“oral literature（口头文学）”的替代，==避免了“literature”一词的词源问题==，同时也是一个独立的积极用语（与 _écriture_ 相对），常用于“去殖民化心灵”‘decolonising the mind’的语境中（参见 Ngugi 1986: 94；Chinweizu 和 Madubuiko 1983: 32ff；Cancel 1989: 17）。
     
 - **Poetics, rhetoric（诗学、修辞）**：有时用于指所有秩序化的语言，有时则仅指语言的某一特定方面（见 Jakobson 1960）。
     
