--- a/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.4 texts：aspecial case.md
+++ b/Oral Traditions and the Verbal Arts/01 Introduction---scope and terminology/1.4 texts：aspecial case.md
@@ -1,18 +1,60 @@
-“文本”text（s）这个词在研究口头表达时是一个格外重要的术语，也带来了独特的问题。
+在这个研究领域中，“口头文本”是一个常见的术语。然而，“文本”这一概念本身存在一些特殊问题。在过去，“文本”通常被视为一个中立的概念——很少被明确讨论——它既代表了研究的单位，又是表述和凝结研究结果的媒介。因此，通常认为，收集和研究文本是核心研究目标，人们对“文本”的定义大致一致，并且它们似乎是外在的、等待被收集和分析的存在。事实上，“口头民俗研究的原始材料就是‘文本’”（Brunvand 1986:19）是多个学科中反复出现的主题。
 
-在某些语境中，它是一个极为宽泛的术语，用于指代任何形式的言语产物或记录。例如，人类学者或语言学家经常把他们从田野收集到的材料称为“文本”。在这种意义上，它几乎等同于“话语”或“言语片段”。
+这种观念与西方文化中以书写为主导的知识传统相吻合。在过去的几个世纪里，语言、交流和艺术形式最自然的表现形式是通过文字文本进行表述和分析。当人文学科扩展到包括口头形式时，这些口头形式也自然被视为文字文本的一种类型。书面文本因此成为语言学或文学研究的焦点，并且被作为人类学田野工作中的一种“客观数据”形式（Ellen 1984:73ff），并构成了民俗学和其他档案资料的主体。事实上，庞大的口头文本收集和分析似乎清晰地证明了它们在世界中的重要性，并且进一步证明了对它们进行研究的兴趣，尤其是我们已经习惯了使用文字文本的研究程序，无论这些文本是书面创作还是以某种方式从口头来源转写的。
 
-然而，“文本”也常常暗示着一种更为具体的意义，即某种可以固定、被看作是一个完整单元的东西。它在研究口头传统和言语艺术时被广泛使用，往往被认为是最方便的分析单位，因为它可以作为一个“作品”被记录、重复、分析和比较。它还与文学研究、语言学以及其他学科的传统相联系。
+因此，许多关于口头传统、口头叙事和言语艺术的研究都基于以“文本”为起点的收集和分析。这一焦点显然将继续存在。除了制度和意识形态的安排外，口头文本的研究在过去带来了很多洞见，未来也无疑会继续带来。因此，这本书——以及任何类似的书籍——必然会关注文本收集和分析的方法。
 
-不过，把口头形式当作“文本”来处理也存在不少问题：
+然而，现在已经不再有对文本作为研究口头艺术和传统的自然焦点的普遍信心，早期的假设正在被当前社会学、文学学和人类学研究中的工作所挑战。本节将指出如果您的研究某种程度上（即使是间接或隐含）涉及文本的概念，必须面对的争议。这里并不打算讨论“文本”这一术语在作为民族志和其他学科展示方式中的扩展含义（如Clifford和Marcus 1986年，Atkinson 1990年），也不涉及“文本”作为“任何连贯的符号复合体”的广义理解（Bakhtin 1986:103）——尽管这些含义与当前的批评不无关系。相反，本节集中讨论传统的书面转录方法——它曾被视为研究口头形式的“唯一”明确单位——以及现在广受争议的“文本”模型。
 
-1. **“文本化”过程**：口头表演在被记录或抄写时，会不可避免地被“文本化”，即被转化为固定的书面形式。这会抹去其口头性、情境性和互动性，从而可能造成误导。
+这一思考来自三个独立但相关的视角。
+
+第一个视角来自对西方文化中一些民族中心主义假设的挑战，这些假设在学术界和民间文化中普遍存在。我们通常认为“文本”是有某种持续性的、固定的存在，几乎是以某种超越时间的方式存在。我们在谈论《荷马史诗》或莎士比亚的作品时，往往认为它们以某种“自足”的方式跨越时代流传下来。当我们谈论小说或诗歌时，我们所指的就是那篇“文字文本”——它在没有其他外在因素的情况下独立存在，被视为一种不变的实体。因此，即使在音乐中，乐谱也常常被认为定义了作品本身，而非演出（更多讨论见Finnegan 1982: 2ff，1988: 123ff；Lord 1960年，尤其是第5和第6章）。
+
+解构这些文化预设是人类学者的重要任务之一。虽然在自己的社会中揭示这些预设是具有争议的，但有一点可以确定，那就是在许多研究中，西方观察者从一种固定“文本”的模式出发，假定文本作为一种独立的存在，只需要收集和分析。
+
+质疑这一“文本”的西方模式，对于口头传统和艺术的研究有着深远的影响。许多过去的研究都是以西方的经验为起点的，假定文本不仅是研究的合适对象，而且是“对象”，且几乎是自我存在的、最终定型的产物，具有自己的“正确”本质。然而，对于许多口头形式（甚至某些书面形式）来说，这种模式并不合适。
+
+例如，在许多口头文学的案例中，同一个“文本”可能在不同的表演中有不同的呈现，而每种表演都可能是“真实的”，没有一个标准的“正确版本”。在这样的情况下，强行将其视为一个固定的、正确的文本是误导的。
+
+主流的书面文本模型对于口头形式来说显得尤其不适用。任何口头呈现的“文本”都依赖于表演，而表演意味着不仅仅是“文字”元素，往往还包括语境、表演技巧、演出时的气氛、观众的反应等。单单看文字，并假设它是文本的本质，可能会忽视其中的实际情况。例如，西非Limba族的故事或现代德克萨斯州的长篇故事（见Finnegan 1967年，Bauman 1986年）并不仅仅依赖于文字，它们的艺术性和意义也与讲述者的技巧、事件的背景、观众的反应等息息相关。仅仅从文字的角度来分析，容易忽视口头文学的实际表现。
+
+一种对传统模式的回应是，关注整个言语行为或表演事件，考虑语境、旁白、肢体语言、音乐甚至视觉元素，这些因素并不是“文本”之外的附加成分，而是其组成部分。并非所有学者都会全盘接受表演学派的观点（见2.4.10），但当今广泛接受的观点是，传统的“文字文本”模式不能完全代表口头表现和艺术形式。
+
+继续解构传统的“文本”概念，进一步提出了新的问题：
+
+- 所有的艺术形式（即便是言语艺术形式）都必须以文字为基础，或者是固定、封闭的单元吗？
     
-2. **忽视表演**：如果研究者仅仅聚焦于“文本”，就容易忽略语境、观众反应、表演方式以及非言语要素，而这些往往对意义具有决定性作用。
+- 文本（及其“文本性”）是相对的、多义的现象，而不是绝对的标准。我们是否应该从经验研究出发，而不仅仅依赖对这些问题的预设定义？
     
-3. **“文本”的边界**：在口头表达中，很难明确划定“一个文本”的开端与结束，因为它可能是流动的、可变的，且依赖表演情境。
+- 如果存在某种程度上固定的文本，什么是最重要的要素，是言语文本的本质还是其他什么？
     
-4. **文化差异**：并非所有文化都将口头表达物理解为与“文本”概念相同的东西。把这一术语套用在不同文化的实践上，可能会引入西方中心的偏见。
+- 文字文本与视觉图像之间的关系又如何？
     
 
-因此，“文本”是一个便利但也危险的术语。它为研究和比较提供了有力的工具，但必须伴随着对其局限的自觉认识。学者们越来越倾向于将“文本”与“表演”结合使用，既承认言语产物的结构特征，也关注其社会与互动层面（见 2.4.10，5.1）。
+这些问题表明，提到“文本”时，应该将其视为详细调查的起点，而非简单的结论。
+
+第二个视角来自人类学及其他学科的普遍转向：不再研究“固定的对象”或“同质的制度”，而是将更多的注意力放在过程和实践上。现在，越来越多的研究不再将传统上被视为“文本”的某些文化作品看作是固定不变的产物，而是作为一次性、特定场合下的表演或创作。伴随这一转变的是，研究者不再仅仅关注文本本身作为研究对象，而是更加关注文本的创作、表演、接受、流通和再创造的过程。
+
+第三个视角来自当前批评理论的进展，它将这些观点与对传统“文本”概念的质疑结合起来。例如，巴特（Barthes 1977）、费什（Fish 1980）等提出了“文本的终结”理论，认为文本的意义并非固定，而是通过读者的解读不断建构。这些批评为口头文学的研究提供了新的视角，使得学者们在分析口头形式时，不能仅仅依赖传统的文字文本模型，而要更加注重表演、语境和互动等要素。
+
+尽管我们可以质疑“文本”的传统概念，然而仍然存在一定的难题。这个问题并非仅仅是学术领域内的讨论。很多口头表达的文化形式，它们的传播与保存常常依赖于书面文本。即便在有些情况下，我们已经认识到口头形式在不断变化、再创作的过程中，依然无法避免文本化的困境。这个“文本化”的过程并不是无意义的，它在很多文化中仍然占有重要地位。
+
+例如，在许多文化中，“文本”往往不是一个独立的存在，而是一个经过反复再创造和修改的产物。在这种文化情境下，文本被看作是“动态的”，而非静态的。文本被不断表演、修改和再创造，这使得每个文本版本都是一个特定文化和社群的“瞬时表现”，而不是一个长期不变的固态实体。在这种情况下，“文本”不仅仅是用来传递信息的工具，更是文化表达、历史传承以及社会互动的一部分。
+
+同样的，对于学者来说，“文本化”的问题不仅仅是口头表达转向书面形式时的技术性问题，更是关于我们如何定义和界定文化内容的更深层次问题。如果我们把文本视为固定的、非变化的东西，我们就错过了很多口头艺术的动态特性。
+
+在实际研究中，学者们已逐渐认识到，“文本”并非是唯一的研究单位。许多口头艺术的研究强调“表演事件”（performance event）的重要性。表演事件强调了口头形式中表演者与观众之间的互动，以及口头表达如何依赖于特定的文化和社交环境来获得意义。
+
+这些研究结果挑战了以“文本”作为文化艺术核心的传统观念，强调了口头艺术在社会互动中的生成与流动性。它们指出，文化表达不应仅仅通过固定的文本形式来呈现，而应当关注动态的创造和表演过程。
+
+因此，“文本”作为一个特殊案例，意味着它不能简单地被视为研究的最终目标。尽管在某些文化中，文本的书写和记录仍然是文化保存和传播的重要途径，但它仅仅是一个方面，而不是口头文化的全部。只有通过对文本创作、表演、流通和再创造的全过程进行深入研究，才能真正理解口头文化的复杂性和多样性。
+
+尽管“文本化”问题有许多批评与挑战，但从实际的学术研究角度来看，仍然需要考虑文本在口头文化中的重要性。尤其是在语言和文化保存中，书面文本依然扮演着核心角色。在当代口头传统的研究中，学者们不仅关注口头作品的流动性和动态性，也必须考虑文本的书面形式如何影响口头文化的长期保存和跨代传播。
+
+例如，许多民族志的研究展示了口头传统和艺术在文本记录中的转变。对于一些文化群体来说，书面文本代表了其口头历史的保存方式，通过将口头传说、历史、诗歌等转写成书面形式，文化得以延续并对外界展现。这种记录不仅仅是文本化的过程，它也是文化自我认同的一部分。在一些地区，民族文化的复兴与书面文本的回归紧密相关。虽然这些文本通常是口头表演的转写，但它们通过记录下这些形式，实际上为未来的文化认同提供了重要的参考框架。
+
+但是，正如先前所述，文本化的过程并非仅仅是复制和保存。每一份文本都是由记录者、编辑者、讲述者等多方参与并塑造的。因此，任何所谓的“原始文本”都是一个文化合作的产物，它结合了历史、社会背景和个人创作的多重层面。这一视角帮助我们理解了文本并非固定、永恒的，它是社会文化互动的动态结果。
+
+此外，学者们越来越认识到，表演本身也具有文本的特征。表演不是一个纯粹的“过程”，而是一个复杂的语境中具有表现力的文化行为。在这个过程中，讲述者通过言语、身体语言、情感表达等多种方式“创造”出文本，每一场表演都构成了一个新的文本。对这些“表演文本”的分析不仅仅是分析语言或内容，更是分析语境和互动中的表演性元素。
+
+这一点与传统的书面文本研究模式有很大不同。在传统模式下，文本被视为固定的存在，是一个可以反复检查和分析的对象。然而，在口头艺术和文化研究中，表演的意义并不是简单地通过固定的文本来传达的，它依赖于当时的情境、讲述者的表达技巧以及观众的反应等因素。因此，口头艺术的“文本”是流动的、多变的，它不应仅限于书面文字。
